--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="body" data-testid="colorBox"></div>
         <h1 data-testid="gameInstructions">
             Amongst the six colors below, Which of them is the color above?
-            <br>Click on the color once U've made up your mind!
+            Click on the color once U've made up your mind!
         </h1>
         <div class="button">
             <button data-testid="colorOption">Color 1</button>
